Fix shading and java version for 1.16